Added support for General Link in GetItemReference method

--- a/Data/Unicorn/propeller.demo/Content/PropellerDemo/Characters/BobaFett.yml
+++ b/Data/Unicorn/propeller.demo/Content/PropellerDemo/Characters/BobaFett.yml
@@ -14,7 +14,8 @@ Languages:
       Value: 20161019T163836Z
     - ID: "4d888b1e-8b88-4594-8b1b-6082bcdcfeff"
       Hint: PrimaryTransportation
-      Value: "{54E9DCC2-5B8C-4F03-9C09-D5408A511DFA}"
+      Value: |
+        <link text="Slave One" anchor="" linktype="internal" class="" title="" target="" querystring="" id="{54E9DCC2-5B8C-4F03-9C09-D5408A511DFA}" />
     - ID: "7079e001-680a-460c-bb86-91e31c3ea2a5"
       Hint: Gender
       Value: Male
