--- a/src/Framework/PropellerLogger/packages.config
+++ b/src/Framework/PropellerLogger/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net45" />
+  <package id="Microsoft.VisualStudio.SlowCheetah" version="3.0.61" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
   <package id="Sitecore.Kernel" version="8.1.160519" targetFramework="net45" developmentDependency="true" />
