Implemented viewmodel factory into demo site.

--- a/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
+++ b/src/Framework/PropellerMvcPresentation/Propeller.Mvc.Presentation.csproj
@@ -91,6 +91,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\ViewModelFactory.cs" />
     <Compile Include="IPropellerTemplate.cs" />
     <Compile Include="PropellerViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
