--- a/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
+++ b/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
@@ -74,7 +74,7 @@
     <Compile Include="Factory\FieldFactory.cs" />
     <Compile Include="Strategies\IFieldStrategy.cs" />
     <Compile Include="Strategies\IntegerFieldStrategy.cs" />
-    <Compile Include="Factory\ViewModelFactory.cs" />
+    <Compile Include="Factory\ModelFactory.cs" />
     <Compile Include="IPropellerModel.cs" />
     <Compile Include="PropellerModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
