--- a/src/Framework/PropellerLogger/DockerCompose/docker-compose.yml
+++ b/src/Framework/PropellerLogger/DockerCompose/docker-compose.yml
@@ -1,9 +1,9 @@
-version: '2'
+version: '2.1'
 
 services:
     elk:
         
-        image: ubuntu
+        image: galtrold/propellerlogger
         
         ports:
             - "5601:5601"
@@ -12,8 +12,8 @@ services:
             - "8085:8085/udp"
         volumes: 
             #- "./propeller-input.conf:/etc/logstash/conf.d/tcp-input.conf"
-            - "c:/projects/FIN.DK/www/:/var/www"
+            - "c:/WebSites/propeller.mvc/Website/:/var/www"
         environment: 
             - "LS_OPTS=--config.reload.automatic"
-            - "doMerge=true"
+            - "doMerge=false"
             
