--- a/src/Test/ModelTest/ModelTest.csproj
+++ b/src/Test/ModelTest/ModelTest.csproj
@@ -173,12 +173,12 @@
     <Compile Include="Constants\ConstantsCarModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\SharedDatabaseDefinition.cs" />
-    <Compile Include="ViewModelFactoryTest\ComplexModels\ResolveComplexObjectReferenceSuccesfully.cs" />
-    <Compile Include="ViewModelFactoryTest\FieldAdapters\GeneralLinkAdapterTest.cs" />
-    <Compile Include="ViewModelFactoryTest\FieldAdapters\ImageAdapterTest.cs" />
-    <Compile Include="ViewModelFactoryTest\SimpleDataTypes\BooleanTest.cs" />
-    <Compile Include="ViewModelFactoryTest\SimpleDataTypes\DateTimeTest.cs" />
-    <Compile Include="ViewModelFactoryTest\SimpleDataTypes\StringTest.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\ComplexModels\ResolveComplexObjectReferenceSuccesfully.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\GeneralLinkAdapterTest.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\ImageAdapterTest.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\BooleanTest.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\DateTimeTest.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\StringTest.cs" />
     <Compile Include="ViewModels\CarViewModel.cs" />
     <Compile Include="ViewModels\CountryViewModel.cs" />
     <Compile Include="ViewModels\Maps\CarMap.cs" />
