--- a/src/Test/ModelTest/ModelTest.csproj
+++ b/src/Test/ModelTest/ModelTest.csproj
@@ -173,7 +173,7 @@
     <Compile Include="Constants\ConstantsCarModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\SharedDatabaseDefinition.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\ComplexModels\ResolveComplexObjectReferenceSuccesfully.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\ComplexModels\Get_referenced_viewmodels.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\GeneralLinkAdapterTest.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\ImageAdapterTest.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\BooleanTest.cs" />
@@ -181,7 +181,8 @@
     <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\StringTest.cs" />
     <Compile Include="ViewModels\CarViewModel.cs" />
     <Compile Include="ViewModels\CountryViewModel.cs" />
-    <Compile Include="ViewModels\Maps\CarMap.cs" />
+    <Compile Include="ViewModels\Maps\CountryViewModelMap.cs" />
+    <Compile Include="ViewModels\Maps\CarModelMap.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
