--- a/src/Framework/PropellerMvcModelResolver/Propeller.Mvc.ModelResolver.csproj
+++ b/src/Framework/PropellerMvcModelResolver/Propeller.Mvc.ModelResolver.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="App_Config\Include\Propeller.Mvc.ModelResolver\ModelResolver.config" />
     <None Include="packages.config" />
   </ItemGroup>
