--- a/src/Test/ModelTest/App.config
+++ b/src/Test/ModelTest/App.config
@@ -54,6 +54,30 @@
   
             </dependentAssembly>
   
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="NSubstitute" publicKeyToken="92dd2e9066daa5ca" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-2.0.3.0" newVersion="2.0.3.0" />
+  
+            </dependentAssembly>
+  
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="xunit.core" publicKeyToken="8d05b1bb7a6fdb6c" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-2.2.0.3545" newVersion="2.2.0.3545" />
+  
+            </dependentAssembly>
+  
        </assemblyBinding>
   
   </runtime>
