--- a/src/Test/ModelTest/ModelTest.csproj
+++ b/src/Test/ModelTest/ModelTest.csproj
@@ -188,17 +188,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_Start\RazorGeneratorMvcStart.cs" />
     <Compile Include="Constants\ConstantsCarModel.cs" />
+    <Compile Include="DatabaseFactory.cs" />
+    <Compile Include="FieldBuilderMethod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tests\FieldTests\Extract_string_value_to_model_property.cs" />
-    <Compile Include="Utils\SharedDatabaseDefinition.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\ComplexModels\Get_referenced_viewmodels.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\GeneralLinkAdapterTest.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\ImageAdapterTest.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\BooleanTest.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\DateTimeTest.cs" />
-    <Compile Include="Tests\ViewModelFactoryTest\SimpleDataTypes\StringTest.cs" />
     <Compile Include="ViewModels\CarViewModel.cs" />
     <Compile Include="ViewModels\CountryViewModel.cs" />
     <Compile Include="ViewModels\Maps\CountryViewModelMap.cs" />
