--- a/src/Test/IntergrationTest/App.config
+++ b/src/Test/IntergrationTest/App.config
@@ -9,7 +9,7 @@
   </appSettings>
   <sitecore>
     <settings>
-      <setting name="LicenseFile" value="..\..\..\..\..\license.xml" />
+      <setting name="LicenseFile" value="..\..\license.xml" />
     </settings>
     <!-- DATABASE TYPE
          For Sitecore versions prior to 8.2 should be 'Sitecore.Data.Database, Sitecore.Kernel'.
@@ -48,9 +48,9 @@
   
             <dependentAssembly>
   
-                 <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
   
-                 <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+                 <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
   
             </dependentAssembly>
   
