--- a/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
+++ b/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Adapters\IFieldAdapter.cs" />
     <Compile Include="Adapters\Image.cs" />
     <Compile Include="Adapters\Integer.cs" />
+    <Compile Include="Strategies\FloatingFieldStrategy.cs" />
     <Compile Include="Strategies\AdapterFieldStrategy.cs" />
     <Compile Include="Strategies\StringFieldStrategy.cs" />
     <Compile Include="Strategies\EmptyFieldStrategy.cs" />
