--- a/src/Test/IntergrationTest/App.config
+++ b/src/Test/IntergrationTest/App.config
@@ -9,12 +9,12 @@
   </appSettings>
   <sitecore>
     <settings>
-      <setting name="LicenseFile" value="..\..\license.xml" />
+      <setting name="LicenseFile" value="..\..\..\..\..\license.xml" />
     </settings>
     <!-- DATABASE TYPE
          For Sitecore versions prior to 8.2 should be 'Sitecore.Data.Database, Sitecore.Kernel'.
          For Sitecore 8.2 and later should be 'Sitecore.Data.DefaultDatabase, Sitecore.Kernel'. -->
-    <sc.variable name="databaseType" value="Sitecore.Data.Database, Sitecore.Kernel" />
+    <sc.variable name="databaseType" value="Sitecore.Data.DefaultDatabase, Sitecore.Kernel" />
   </sitecore>
   <log4net />
   <system.web>
@@ -41,20 +41,44 @@
       </properties>
     </profile>
   </system.web>
-  
+
   <runtime>
-  
-       <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-  
-            <dependentAssembly>
-  
-                 <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-  
-                 <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
-  
-            </dependentAssembly>
-  
-       </assemblyBinding>
-  
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
+
+      </dependentAssembly>
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-4.5.0.0" newVersion="4.5.0.0" />
+
+      </dependentAssembly>
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection.Abstractions" publicKeyToken="adb9793829ddae60" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
+
+      </dependentAssembly>
+
+      <dependentAssembly>
+
+        <assemblyIdentity name="Microsoft.Extensions.DependencyInjection" publicKeyToken="adb9793829ddae60" culture="neutral" />
+
+        <bindingRedirect oldVersion="0.0.0.0-1.1.1.0" newVersion="1.1.1.0" />
+
+      </dependentAssembly>
+
+    </assemblyBinding>
+
   </runtime>
 </configuration>
