--- a/src/Test/IntergrationTest/IntergrationTest.csproj
+++ b/src/Test/IntergrationTest/IntergrationTest.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Constants\ConstantsVehicleModel.cs" />
     <Compile Include="Constants\ConstantVehicleClassModel.cs" />
     <Compile Include="Constants\ConstantsMovieModel.cs" />
+    <Compile Include="Models\Maps\VehicleClassModelMap.cs" />
     <Compile Include="Models\MovieModel.cs" />
     <Compile Include="Models\VehicleClassModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -110,7 +111,7 @@
     <Compile Include="Utils\SharedDatabaseDefinition.cs" />
     <Compile Include="Models\VehichleModel.cs" />
     <Compile Include="Models\Maps\VehichleModelMap.cs" />
-    <Compile Include="Models\Maps\CountryViewModelMap.cs" />
+    <Compile Include="Models\Maps\MovieModelMap.cs" />
     <Compile Include="Utils\ShareMediaProvider.cs" />
   </ItemGroup>
   <ItemGroup>
