Add reference methods to viewmodel.

--- a/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
+++ b/src/Framework/PropellerMvcModel/Propeller.Mvc.Model.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Adapters\Image.cs" />
     <Compile Include="Adapters\Integer.cs" />
     <Compile Include="Factory\ModelFactory.cs" />
+    <Compile Include="Repository\ItemRepository.cs" />
     <Compile Include="Strategies\FloatingFieldStrategy.cs" />
     <Compile Include="Strategies\AdapterFieldStrategy.cs" />
     <Compile Include="Strategies\StringFieldStrategy.cs" />
