ModelFactory always include other viewmodels

--- a/src/Test/IntergrationTest/IntergrationTest.csproj
+++ b/src/Test/IntergrationTest/IntergrationTest.csproj
@@ -99,13 +99,17 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ConstantsCpuModel.cs" />
     <Compile Include="Constants\ConstantsVehicleModel.cs" />
     <Compile Include="Constants\ConstantVehicleClassModel.cs" />
     <Compile Include="Constants\ConstantsMovieModel.cs" />
+    <Compile Include="Models\CpuModel.cs" />
+    <Compile Include="Models\Maps\CpuModelMap.cs" />
     <Compile Include="Models\Maps\VehicleClassModelMap.cs" />
     <Compile Include="Models\MovieModel.cs" />
     <Compile Include="Models\VehicleClassModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tests\ViewModelFactoryTest\CircularReference\CatchCirtularReferenceFromSingleReferenced.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\ComplexModels\Get_referenced_viewmodels.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\GeneralLinkAdapterTest.cs" />
     <Compile Include="Tests\ViewModelFactoryTest\FieldAdapters\ImageAdapterTest.cs" />
