--- a/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
+++ b/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
@@ -8,7 +8,7 @@ input {
 filter {
   if [type] == "log4net" {
     grok {
-      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{WORD:hostname} %{LOGLEVEL:loglevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
+      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{WORD:hostname} %{WORD:sitename} %{LOGLEVEL:loglevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
 
     }
     mutate {
