--- a/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.sc81.config
+++ b/src/Framework/PropellerLogger/App_Config/Include/Propeller.Logger/propellerlog.sc81.config
@@ -1,5 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
-<!-- For more information on using transformations 
-     see the web.config examples at http://go.microsoft.com/fwlink/?LinkId=214134. -->
-<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
+﻿
+
+
+<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/">
+  <sitecore>
+    <log4net>
+      <appender name="UdpTextAppender" type="Propeller.Logger.Appenders.UdpTextAppender, Propeller.Logger">
+        <port value="8085" />
+        <destination value="127.0.0.1" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%4t %d{yyyy-MM-dd HH:mm:ss,fff} %P{hostname} %P{sitename} %-5p %m%n" />
+        </layout>
+      </appender>
+      <root>
+        <appender-ref ref="UdpTextAppender" />
+      </root>
+    </log4net>
+  </sitecore>
 </configuration>
