Extend log information to incluse sitename and namespace

--- a/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
+++ b/src/Framework/PropellerLogger/DockerCompose/propeller-input.conf
@@ -8,11 +8,33 @@ input {
 filter {
   if [type] == "log4net" {
     grok {
-      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{WORD:hostname} %{WORD:sitename} %{LOGLEVEL:loglevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
-
+      match => { "message" => "(?m)%{NUMBER:threadid} %{TIMESTAMP_ISO8601:sourceTimestamp} %{WORD:hostname} %{NOTSPACE:log_owner} (?<sitename>\b[\w+|.]+\b) %{LOGLEVEL:logLevel} %{GREEDYDATA:[@metadata][tmpMessage]}"}
     }
     mutate {
       update => ["message", "%{[@metadata][tmpMessage]}"]
+    }
+    mutate {
+      add_field => { "[@metadata][lowercaseSitename]" => "%{sitename}"}
+      add_field => { "[@metadata][perf]" => "%{message}"}
+    }
+    mutate {
+      lowercase => [ "[@metadata][lowercaseSitename]" ]
+      split => ["[@metadata][perf]", "|"]
+    }
+    if [log_owner] == "propeller.logger.PerfWatch" {
+      mutate {
+        add_field => { "perf_name" => "%{[@metadata][perf][0]}"}
+        add_field => { "perf_value" => "%{[@metadata][perf][1]}"}
+      }
+    } else {
+      mutate{
+        add_field => { "perf_name" => ""}
+        add_field => { "perf_value" => "0"}
+      }
+    }
+    mutate{
+      convert => {"perf_value" => "integer"}
+      update => ["sitename", "%{[@metadata][lowercaseSitename]}"]
     }
   }
 }
@@ -21,7 +43,6 @@ output {
   elasticsearch {
     hosts => ["localhost"]
     manage_template => false
-    index => "sitecore"
+    index => "%{sitename}"
     } 
-
 }
