Clean up references.

--- a/src/Framework/PropellerMvcModelResolver/packages.config
+++ b/src/Framework/PropellerMvcModelResolver/packages.config
@@ -13,12 +13,8 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" />
   <package id="RazorGenerator.Mvc" version="2.4.2" targetFramework="net46" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net46" />
-  <package id="Sitecore.Kernel" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
-  <package id="Sitecore.Logging" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
-  <package id="Sitecore.Logging.Client" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
-  <package id="Sitecore.Mvc" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
-  <package id="Sitecore.NVelocity" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
-  <package id="Sitecore.Zip" version="8.2.160729" targetFramework="net46" developmentDependency="true" requireReinstallation="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="7.2.140228" targetFramework="net45" developmentDependency="true" />
+  <package id="Sitecore.Mvc.NoReferences" version="7.2.140228" targetFramework="net45" developmentDependency="true" />
   <package id="System.Collections" version="4.0.11" targetFramework="net46" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net46" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net46" />
