--- a/src/Domain/Demo/Demo.csproj
+++ b/src/Domain/Demo/Demo.csproj
@@ -213,6 +213,7 @@
     <Content Include="Views\Planet\Index.cshtml" />
     <Content Include="Views\Vehicle\Index.cshtml" />
     <Content Include="Views\Organization\Index.cshtml" />
+    <None Include="Properties\PublishProfiles\Propeller.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\CharacterController.cs" />
@@ -221,14 +222,18 @@
     <Compile Include="Controllers\VehicleController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\CharacterViewModel.cs" />
+    <Compile Include="ViewModels\Map\ArmorViewModelMap.cs" />
     <Compile Include="ViewModels\Map\CharacterMap.cs" />
     <Compile Include="ViewModels\Map\OrganizationMap.cs" />
     <Compile Include="ViewModels\Map\PlanetMap.cs" />
     <Compile Include="ViewModels\Map\VehicleMap.cs" />
+    <Compile Include="ViewModels\Map\WeaponViewModelMap.cs" />
     <Compile Include="ViewModels\OrganizationViewModel.cs" />
     <Compile Include="ViewModels\PlanetViewModel.cs" />
     <Compile Include="ViewModels\TestViewModel.cs" />
     <Compile Include="ViewModels\VehicleViewModel.cs" />
+    <Compile Include="ViewModels\ArmorViewModel.cs" />
+    <Compile Include="ViewModels\WeaponViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
