--- a/Data/Unicorn/propeller.demo/Content/PropellerDemo/Characters/BobaFett/LaserMountedHelmet.yml
+++ b/Data/Unicorn/propeller.demo/Content/PropellerDemo/Characters/BobaFett/LaserMountedHelmet.yml
@@ -12,6 +12,9 @@ Languages:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
       Value: 20200107T174850Z
+    - ID: "b69bed8b-4c31-4455-bf30-3b1c21b9fe4f"
+      Hint: Category
+      Value: Defensive & Offensive
     - ID: "bbc0ab3a-5b9c-4098-a9af-32be463ebe0b"
       Hint: ItemPropertie_ItemValue
       Value: 44
